working on getting prisma working, not going too well

--- a/.env
+++ b/.env
@@ -1,2 +1,13 @@
 REACT_APP_AUTHO_DOMAIN=dev-sb7g1frlkt1tof1z.us.auth0.com
 REACT_APP_AUTHO_CLIENT_ID=wnR2mpIMJq2Jwf62FhEH2ZcLd8H3Qz6V
+
+
+# This was inserted by `prisma init`:
+# Environment variables declared in this file are automatically made available to Prisma.
+# See the documentation for more detail: https://pris.ly/d/prisma-schema#accessing-environment-variables-from-the-schema
+
+# Prisma supports the native connection string format for PostgreSQL, MySQL, SQLite, SQL Server, MongoDB and CockroachDB.
+# See the documentation for all the connection string options: https://pris.ly/d/connection-strings
+
+# DATABASE_URL="postgresql://johndoe:randompassword@localhost:5432/gptinder?schema=public"
+DATABASE_URL="postgresql://labber:password@localhost:5432/gptinder?schema=public"
